# turnike_esp32p4_uartheader

./: .gitignore  BUILD_AND_FLASH.md  CHANGES_SUMMARY.md  CHECKLIST.md  CLAUDE.md  CMakeLists.txt  CURRENT_STATE.md  DEBUGGING.md  FINAL_FIX_INSTRUCTIONS.md  FINAL_REVIEW.md  FINAL_STATUS.md  FORCE_REBUILD.md  INA219_WIRING.md  IRQ_BUG_ANALYSIS.md  IRQ_CODE_REVIEW.md  IRQ_EXPERIMENT_STATUS.md  IRQ_FINAL_REVIEW.md  NFC_TROUBLESHOOTING.md  PERFORMANCE_OPTIMIZATION.md  PRODUCTION_MODE.md  QUICK_START.md  REBUILD_INSTRUCTIONS.md  ROLLBACK_GUIDE.md  UPDATE_BAD_ACK_FIX.md  WIRING_DIAGRAM.txt  architecture.md  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  access_check.c  access_check.h  app_main.c  audio.c  audio.h  config.h  eth_ip101.c  eth_ip101.h  gm805_uart.c  gm805_uart.h  idf_component.yml  ina219.c  ina219.h  ota.c  ota.h  pa_access_check.c  pa_access_check.h  pn532_spi.c  pn532_spi.h  secrets.h.template  status_reporter.c  status_reporter.h  telnet_server.c  telnet_server.h  tts_data.h
tools/: gen_tts.py  mola.py
